--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
 <body>
 <div style="max-width: 500px; margin: 10% auto auto;">
     {{if .Success}}
-        <p>Welcome {{.Username}} Status : Logged In <a href="http://127.0.0.1:8000/dashboard/logout">Logout</a></p>
+        <p>Welcome {{.Username}} Status : Logged In <a href="https://sheltered-earth-42665.herokuapp.com/dashboard/logout">Logout</a></p>
     {{end}}
 </div>
 </body>
