--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
 
     <button onclick="validateForm()">SUBMIT</button>
 
-    <p>Already a member? <a href="http://127.0.0.1:8000/">Sign In Now</a></p>
+    <p>Already a member? <a href="https://sheltered-earth-42665.herokuapp.com">Sign In Now</a></p>
 </div>
 
 <script>
