--- a/templates/reset.html
+++ b/templates/reset.html
@@ -11,7 +11,7 @@
         <input type="text" placeholder="email" name="email" id="email" required><br>
         <input type="submit" value="SUBMIT">
     </form>
-    <p>Not a member? <a href="http://127.0.0.1:8000/register/">Sign Up Now</a></p>
+    <p>Not a member? <a href="https://sheltered-earth-42665.herokuapp.com/register">Sign Up Now</a></p>
 </div>
 </body>
 </html>
