--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
         <input type="submit" value="SUBMIT">
     </form>
 
-    <p>Forgot password? <a href="http://127.0.0.1:8000/reset/">Reset Here</a></p>
-    <p>Not a member? <a href="http://127.0.0.1:8000/register/">Sign Up Now</a></p>
+    <p>Forgot password? <a href="https://sheltered-earth-42665.herokuapp.com/reset">Reset Here</a></p>
+    <p>Not a member? <a href="https://sheltered-earth-42665.herokuapp.com/register">Sign Up Now</a></p>
 </div>
 </body>
 </html>
