--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -3,7 +3,7 @@
 
     <div class="card">
 
-        <img src="https://sheltered-earth-42665.herokuapp.com/static/img/logo.png">
+        <img alt="Image not found" src="https://sheltered-earth-42665.herokuapp.com/static/img/logo.png">
 
         <div class="card-body">
 
