--- a/templates/register.tmpl.html
+++ b/templates/register.tmpl.html
@@ -20,7 +20,7 @@
 
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="text" placeholder="phone" name="phone" id="phone" required>
+                    <input type="text" class="form-control" placeholder="phone" name="phone" id="phone" required>
                 </div>
 
                 <div class="form-group">
@@ -30,7 +30,7 @@
 
                 <div class="form-group">
                     <label for="confirm_password">Confirm Password</label>
-                    <input type="password" placeholder="confirm password" name="confirm_password" id="confirm_password" required>
+                    <input type="password" class="form-control" placeholder="confirm password" name="confirm_password" id="confirm_password" required>
                 </div>
 
             </form>
