--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -11,12 +11,12 @@
 
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" placeholder="username" name="username" id="username" required>
+                    <input type="text" class="form-control" placeholder="Username" name="username" id="username" required>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" placeholder="password" name="password" id="password" required>
+                    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
