--- a/templates/register.tmpl.html
+++ b/templates/register.tmpl.html
@@ -9,7 +9,7 @@
 
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" placeholder="username" name="username" id="username" required>
+                    <input type="text" class="form-control" placeholder="Username" name="username" id="username" required>
                 </div>
 
                 <div class="form-group">
@@ -20,17 +20,17 @@
 
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="text" class="form-control" placeholder="phone" name="phone" id="phone" required>
+                    <input type="text" class="form-control" placeholder="Phone" name="phone" id="phone" required>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" placeholder="password" name="password" id="password" required>
+                    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
                 </div>
 
                 <div class="form-group">
                     <label for="confirm_password">Confirm Password</label>
-                    <input type="password" class="form-control" placeholder="confirm password" name="confirm_password" id="confirm_password" required>
+                    <input type="password" class="form-control" placeholder="Confirm password" name="confirm_password" id="confirm_password" required>
                 </div>
 
             </form>
