--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -3,7 +3,7 @@
 
     <div class="card">
 
-        <img alt="Image not found" src="https://sheltered-earth-42665.herokuapp.com/static/img/logo.png">
+        <img alt="Image not found" src="http://127.0.0.1:8000/static/img/logo.png">
 
         <div class="card-body">
 
@@ -23,8 +23,8 @@
 
             </form>
 
-            <p>Forgot password? <a href="https://sheltered-earth-42665.herokuapp.com/reset">Reset Here</a></p>
-            <p>Not a member? <a href="https://sheltered-earth-42665.herokuapp.com/register">Sign Up Now</a></p>
+            <p>Forgot password? <a href="http://127.0.0.1:8000/reset">Reset Here</a></p>
+            <p>Not a member? <a href="http://127.0.0.1:8000/register">Sign Up Now</a></p>
 
         </div>
 
