--- a/templates/reset.tmpl.html
+++ b/templates/reset.tmpl.html
@@ -15,7 +15,7 @@
 
                 <button type="submit" class="btn btn-primary">Submit</button>
 
-                <p>Not a member? <a href="https://sheltered-earth-42665.herokuapp.com/register">Sign Up Now</a></p>
+                <p>Not a member? <a href="http://127.0.0.1:8000/register">Sign Up Now</a></p>
 
             </form>
 
