--- a/templates/dashboard.tmpl.html
+++ b/templates/dashboard.tmpl.html
@@ -2,7 +2,7 @@
 <body class="row  d-flex justify-content-center">
 <div>
     {{if .Success}}
-        <p>Welcome {{.Username}} Status : Logged In <a href="https://sheltered-earth-42665.herokuapp.com/dashboard/logout">Logout</a></p>
+        <p>Welcome {{.Username}} Status : Logged In <a href="http://127.0.0.1:8000/dashboard/logout">Logout</a></p>
     {{end}}
 </div>
 {{template "footer" .}}
