--- a/templates/reset.tmpl.html
+++ b/templates/reset.tmpl.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 {{template "header" .}}
 <body class="row  d-flex justify-content-center">
 
@@ -24,3 +26,5 @@
     </div>
 
 {{template "footer" .}}
+</body>
+</html>
