--- a/templates/dashboard.tmpl.html
+++ b/templates/dashboard.tmpl.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 {{template "header" .}}
 <body class="row  d-flex justify-content-center">
 <div>
@@ -6,3 +8,5 @@
     {{end}}
 </div>
 {{template "footer" .}}
+</body>
+</html>
