--- a/templates/register.tmpl.html
+++ b/templates/register.tmpl.html
@@ -7,12 +7,11 @@
 
         <div class="card-body">
 
-            <form id="register_form" method="POST">
+            <form id="register_form" method="POST" class="needs-validation" novalidate>
 
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" placeholder="Username" name="username" id="username" required>
-                    <div class="valid-feedback">Checks out.</div>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
@@ -20,26 +19,30 @@
                     <label for="email">Email address</label>
                     <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="text" class="form-control" placeholder="Phone" name="phone" id="phone" required>
+                    <input type="tel" class="form-control" placeholder="Phone" name="phone" id="phone" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="confirm_password">Confirm Password</label>
                     <input type="password" class="form-control" placeholder="Confirm password" name="confirm_password" id="confirm_password" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
-            </form>
+                <button class="btn btn-primary">SUBMIT</button>
 
-            <button class="btn btn-primary" onclick="validateForm()">SUBMIT</button>
+            </form>
 
             <p>Already a member? <a href="http://127.0.0.1:8000">Sign In Now</a></p>
 
@@ -47,7 +50,26 @@
     </div>
 
 <script>
-    function validateForm() {
+    // Disable form submissions if there are invalid fields
+    (function() {
+        'use strict';
+        window.addEventListener('load', function() {
+            // Get the forms we want to add validation styles to
+            let forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            let validation = Array.prototype.filter.call(forms, function(form) {
+                form.addEventListener('submit', function(event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+
+    /*function validateForm() {
         let username = document.forms["register_form"]["username"].value;
         let email = document.forms["register_form"]["email"].value;
         let phone = document.forms["register_form"]["phone"].value;
@@ -67,9 +89,9 @@
         }
     }
 
-    /**
+    /!**
      * @return {boolean}
-     */
+     *!/
     function ValidateEmail(email) {
         if (/^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/.test(email)) {
             return true;
@@ -78,9 +100,9 @@
         return false;
     }
 
-    /**
+    /!**
      * @return {boolean}
-     */
+     *!/
     function ValidatePhone(phone) {
         let phone_no_pattern = /^\(?([0-9]{3})\)?[]?([0-9]{3})[]?([0-9]{4})$/;
         if(phone.match(phone_no_pattern)) {
@@ -91,9 +113,9 @@
         }
     }
 
-    /**
+    /!**
      * @return {boolean}
-     */
+     *!/
     function ValidatePassword(password,confirm_password) {
        if(password.length>=5){
            if(password.match(confirm_password)) {
@@ -107,7 +129,7 @@
            return false;
        }
 
-    }
+    }*/
 </script>
 {{template "footer" .}}
 </body>
