--- a/templates/reset.tmpl.html
+++ b/templates/reset.tmpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {{template "header" .}}
-<body class="row  d-flex justify-content-center">
+<body class="container">
 
     <div class="card">
 
