--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 {{template "header" .}}
-<body class="row  d-flex justify-content-center">
+<body class="container">
 
     <div class="card">
 
-        <img alt="Image not found" src="http://127.0.0.1:8000/static/img/logo.png">
+        <img class="" alt="Image not found" src="http://127.0.0.1:8000/static/img/logo.png">
 
         <div class="card-body">
 
@@ -13,12 +13,12 @@
 
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" placeholder="Username" name="username" id="username" required>
+                    <input type="text" class="form-control form-control-sm" placeholder="Username" name="username" id="username" required>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
+                    <input type="password" class="form-control form-control-sm" placeholder="Password" name="password" id="password" required>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
