--- a/templates/register.tmpl.html
+++ b/templates/register.tmpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {{template "header" .}}
-<body class="row  d-flex justify-content-center">
+<body class="container">
 
     <div class="card">
 
@@ -11,32 +11,32 @@
 
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" placeholder="Username" name="username" id="username" required>
+                    <input type="text" class="form-control form-control-sm" placeholder="Username" name="username" id="username" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email" required>
+                    <input type="email" class="form-control form-control-sm" id="email" aria-describedby="emailHelp" placeholder="Email" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="tel" class="form-control" placeholder="Phone" name="phone" id="phone" required>
+                    <input type="tel" class="form-control form-control-sm" placeholder="Phone" name="phone" id="phone" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
+                    <input type="password" class="form-control form-control-sm" placeholder="Password" name="password" id="password" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
                 <div class="form-group">
                     <label for="confirm_password">Confirm Password</label>
-                    <input type="password" class="form-control" placeholder="Confirm password" name="confirm_password" id="confirm_password" required>
+                    <input type="password" class="form-control form-control-sm" placeholder="Confirm password" name="confirm_password" id="confirm_password" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
 
